# termy

./: Cargo.toml  justfile
Casks/: termy.rb
crates/cli/: Cargo.toml
crates/cli/src/commands/: edit_config.rs  list_colors.rs  list_keybinds.rs  prettify_config.rs  show_config.rs  tui.rs  update.rs  validate_config.rs
crates/command_core/src/: catalog.rs  keybind.rs
crates/config_core/: Cargo.toml
crates/config_core/src/: default_config.txt  document.rs  lib.rs  parser.rs  parser_tests.rs  schema.rs  types.rs
crates/native_sdk/src/: lib.rs
crates/openai/: Cargo.toml
crates/openai/src/: lib.rs
crates/terminal_ui/: Cargo.toml
crates/terminal_ui/src/: links.rs  runtime.rs
crates/terminal_ui/tests/: tmux_split_integration.rs
crates/termy_api/: Cargo.toml
crates/termy_api/src/: main.rs
docs/: configuration.md  keybindings.md
scripts/: generate-icon.sh
site/: package.json  server.ts
site/public/: llms.txt
site/src/components/: Download.tsx  Features.tsx  Header.tsx  Hero.tsx  InteractiveTerminal.tsx
site/src/hooks/: useNotraReleases.ts
site/src/lib/: docs.ts  theme-store.ts
site/src/routes/: __root.tsx
src/: app_actions.rs  colors.rs  commands.rs  deeplink.rs  main.rs  settings_view.rs  text_input.rs  theme_store.rs
src/config/: io.rs  mod.rs  mutate.rs
src/settings_view/: colors.rs  components.rs  keybinds.rs  mod.rs  search.rs  sections.rs  state.rs  state_apply.rs
src/terminal_view/: ai_input.rs  inline_input.rs  interaction.rs  mod.rs  persistence.rs  render.rs  search.rs  tabs.rs  titles.rs
src/terminal_view/tabs/: drag.rs  (+5 more)
(+25 files in other folders)
