[package]
name = "termy_cli"
version = "0.1.29"
edition = "2024"

[[bin]]
name = "termy-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "6.0"
anyhow = "1.0"
ratatui = "0.29"
crossterm = "0.28"
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
semver = "1"
termy_config_core = { path = "../config_core" }

# For list-fonts (platform-specific)
[target.'cfg(target_os = "macos")'.dependencies]
core-text = "=21.0.0"
core-foundation = "0.10"
